tests/baselines/reference/classWithConstructors.errors.txt
==== tests/cases/compiler/classWithConstructors.ts (12 errors) ====
    module NonGeneric {
        class C {
            constructor(x: string) { }
        }
    
        var c = new C(); // error
                    ~
!!! classWithConstructors.ts(6,17): error TS2081: Supplied parameters do not match any signature of call target.
                    ~
!!! classWithConstructors.ts(6,17): error TS2085: Could not select overload for 'new' expression.
        var c2 = new C(''); // ok
    
        class C2 {
            constructor(x: number);
            constructor(x: string);
            constructor(x: any) { }
        }
    
        var c3 = new C2(); // error
                     ~~
!!! classWithConstructors.ts(15,18): error TS2081: Supplied parameters do not match any signature of call target.
                     ~~
!!! classWithConstructors.ts(15,18): error TS2085: Could not select overload for 'new' expression.
        var c4 = new C2(''); // ok
        var c5 = new C2(1); // ok
    
        class D extends C2 { }
    
        var d = new D(); // error
                    ~
!!! classWithConstructors.ts(21,17): error TS2081: Supplied parameters do not match any signature of call target.
                    ~
!!! classWithConstructors.ts(21,17): error TS2085: Could not select overload for 'new' expression.
        var d2 = new D(1); // ok
        var d3 = new D(''); // ok
    }
    
    module Generics {
        class C<T> {
            constructor(x: T) { }
        }
    
        var c = new C(); // error
                    ~
!!! classWithConstructors.ts(31,17): error TS2081: Supplied parameters do not match any signature of call target.
                    ~
!!! classWithConstructors.ts(31,17): error TS2085: Could not select overload for 'new' expression.
        var c2 = new C(''); // ok
    
        class C2<T,U> {
            constructor(x: T);
            constructor(x: T, y: U);
            constructor(x: any) { }
        }
    
        var c3 = new C2(); // error
                     ~~
!!! classWithConstructors.ts(40,18): error TS2081: Supplied parameters do not match any signature of call target.
                     ~~
!!! classWithConstructors.ts(40,18): error TS2085: Could not select overload for 'new' expression.
        var c4 = new C2(''); // ok
        var c5 = new C2(1, 2); // ok
    
        class D<T, U> extends C2<T, U> { }
    
        var d = new D(); // error
                    ~
!!! classWithConstructors.ts(46,17): error TS2081: Supplied parameters do not match any signature of call target.
                    ~
!!! classWithConstructors.ts(46,17): error TS2085: Could not select overload for 'new' expression.
        var d2 = new D(1); // ok
        var d3 = new D(''); // ok
    }